--- a/transform/instructions.yaml
+++ b/transform/instructions.yaml
@@ -1,5 +1,7 @@
-instructions:
-  - getStopById:
+sfdp_endpoints: #change to sfdp_endpoints
+  - sfdp_endpoint:
+      fdp_path: /stops/stop_id/{stop_id}
+      sfdp_path: /stop_id/{stop_id}
       schema:
           Stop:
               type: object
@@ -7,12 +9,8 @@ instructions:
                 stop_ID:
                     type: integer
                     example: 101
-                    description: "map stop_id to new column stop_ID"
-                stop_lat_lon:
-                    type: number
-                    example: 37.50755595
-                    description: "Concatenated stop_lat with stop_lon for this stop"
-                stop_name:
+                    description: "map stop_id" #change to instruction
+                stop_full_name:
                     type: string
                     example: Martiri LibertĂ SaittaMarshall
                     description: "Concatenated stop_name with parent_station for this stop"    
