--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ fastapi==0.111.0
 fastapi-cli==0.0.4
 uvicorn==0.20.0
 Jinja2==3.1.3
-git+ssh://git@github.ibm.com/mc-connectors/connector.git@tool-calling-reformat
+git+ssh://git@github.ibm.com/mc-connectors/connector.git
