--- a/examples/ephemeral_vectorstore_config.yaml
+++ b/examples/ephemeral_vectorstore_config.yaml
@@ -1,60 +1,80 @@
 aiPlatforms:
-  BAM:
-    platform: bam
-    apiKey: $BAM_KEY
-    apiBase: https://bam-api.res.ibm.com/
+  skylab:
+    platform: openai
+    credentials:
+      api_key: EMPTY
+      api_base: http://luigi.millennium.berkeley.edu:8000/v1
+  RITS:
+    platform: rits
+    credentials:
+      api_key: $RITS_APIKEY
+      api_base: https://inference-3scale-apicast-production.apps.rits.fmaas.res.ibm.com
+  Watsonx:
+    platform: watsonx
+    credentials:
+      api_key: $WATSONX_APIKEY
+      api_base: https://us-south.ml.cloud.ibm.com
+      api_project_id: 02c995f9-d57b-444e-8833-0ab8e404f139
 models:
   encoder-slate:
-    id: ibm/slate.30m.english.rtrvr
-    host: BAM
+    id: ibm/slate-125m-english-rtrvr-v2
+    host: Watsonx
     parameters:
-      truncate_input_tokens: true
-  granite-api:
-    id: ibm/granite-20b-code-instruct-unified-api
-    host: BAM
+      truncate_input_tokens: 500
+  granite-uapi20:
+    id: ibm-granite/granite-20b-code-instruct-unified-api
+    host: RITS
+    parameters:
+      max_tokens: 1024
+      seed: 10
+      temperature: 0
+  granite-code-inst20:
+    id: ibm/granite-20b-code-instruct
+    host: Watsonx
     parameters:
       decoding_method: greedy
       max_new_tokens: 1024
       random_seed: 10
       temperature: 0
-  bge-large-en-v1:
-      id: baai/bge-large-en-v1.5
-      host: BAM
+  granite-code-inst8:
+    id: ibm/granite-20b-code-instruct
+    host: Watsonx
+    parameters:
+      decoding_method: greedy
+      max_new_tokens: 1024
+      random_seed: 10
+      temperature: 0
+  encoder-slate-documents-query:
+      id: ibm/slate-125m-english-rtrvr-v2
+      host: Watsonx
       parameters:
-        truncate_input_tokens: true
+        truncate_input_tokens: 500
         return_options:
           documents: true
           query: true
-  granite-multilang :      
-    id: ibm/granite-20b-multilang-lab-rc
-    host: BAM
+  llama3-1-70:
+    id: meta-llama/llama-3-1-70b-instruct
+    host: RITS
     parameters:
-      decoding_method: greedy
-      max_new_tokens: 4096
-      random_seed: 10
+      max_tokens: 1024
+      seed: 10
       temperature: 0
-  llama3 :      
-    id: peri/llama-3-70b-instruct
-    host: BAM
-    parameters:
-      decoding_method: greedy
-      max_new_tokens: 2048
-      temperature: 0
-retrieval:
-  # (required) Models to use for retrieval, ordered by preference
-  models:
-    - encoder-slate
-  topK: 10
-  rerank:
-      # (optional) Maximum number of results to return
-      topN: 4
-      model: bge-large-en-v1
+
 generation:
   models:
-    - granite-api
+    - granite-code-inst8
   maxIter: 3
-evaluation:
-  models:
-   - llama3
-apiKey: $INSTANA_KEY
-auth: apiToken
+  features:
+    rag: true
+    staticChecks: true
+    llmEval: true
+  retrieval:
+    models:
+      - encoder-slate
+    topK: 10
+    rerank:
+      model: encoder-slate-documents-query
+      topN : 4
+  evaluation:
+    models:
+     - llama3-1-70
