Add executor repo as dependency in requirements, fix ssh config in dockerfile
Signed-off-by: MohamedMahameed <mohamed.mahameed@ibm.com>

--- a/generated_servers/requirements-sfdps.txt
+++ b/generated_servers/requirements-sfdps.txt
@@ -4,4 +4,4 @@ pandas
 varsubst
 PyYAML
 langchain_core
-#git+ssh://git@github.ibm.com/<REPO>/executor-test.git
+git+ssh://git@github.ibm.com/Mohamed-Mahameed/executor_test.git
