refactor code, make it better structured, add gitignore, align with new version of GIN

--- a/config/gin-teadal-config.yaml
+++ b/config/gin-teadal-config.yaml
@@ -1,4 +1,9 @@
 aiPlatforms:
+  OLLAMA:
+    platform: openai
+    credentials:
+      api_key: ollama
+      api_base: http://localhost:11434/v1
   Watsonx:
     platform: watsonx
     credentials:
@@ -6,11 +11,6 @@ aiPlatforms:
       api_base: https://us-south.ml.cloud.ibm.com
       api_project_id: 02c995f9-d57b-444e-8833-0ab8e404f139
 models:
-  encoder-slate:
-    id: ibm/slate-125m-english-rtrvr-v2
-    host: Watsonx
-    parameters:
-      truncate_input_tokens: 500
   granite-code-inst20:
     id: ibm/granite-20b-code-instruct
     host: Watsonx
@@ -19,14 +19,13 @@ models:
       max_new_tokens: 1024
       random_seed: 10
       temperature: 0
-  encoder-slate-documents-query:
-      id: ibm/slate-125m-english-rtrvr-v2
-      host: Watsonx
-      parameters:
-        truncate_input_tokens: 500
-        return_options:
-          documents: true
-          query: true
+  granite3.1-dense:
+    id: granite3.1-dense:8b
+    host: OLLAMA
+    parameters:
+      max_tokens: 1024
+      seed: 10
+      temperature: 0
 generation:
   models:
     - granite-code-inst20
@@ -36,11 +35,4 @@ generation:
     staticChecks: true
     llmEval:
        enabled: false
-  retrieval:
-    models:
-      - encoder-slate
-    topK: 10
-    rerank:
-      model: encoder-slate-documents-query
-      topN : 4
 
