--- a/Dockerfile_test
+++ b/Dockerfile_test
@@ -21,5 +21,12 @@ RUN --mount=type=ssh  pip install --no-cache-dir -r requirements-sfdps.txt
 # Expose the application port
 EXPOSE 8000
 
+COPY start_servers.sh /app/start_servers.sh
+COPY tttt.py /app/
+
+RUN chmod +x /app/start_servers.sh
+RUN ls
+# Run the shell script
+CMD ["/bin/bash", "/app/start_servers.sh"]
 # Run the FastAPI server using Uvicorn
-CMD ["uvicorn", "generated_fastapi_app_medical-spec:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "generated_fastapi_app_medical-spec:app", "--host", "0.0.0.0", "--port", "8000"]
