--- a/asg-instructions/Medical-instructions.yaml
+++ b/asg-instructions/Medical-instructions.yaml
@@ -2,7 +2,7 @@ sfdp_endpoints:
   - persons_endpoint:
       fdp_path: /persons
       sfdp_path: /persons_above_30
-      sfdp_description: ''''''''''''
+      sfdp_endpoint_description: This endpoint returns all the people of age > 30
       schema:
           Person:
               type: object
@@ -18,6 +18,7 @@ sfdp_endpoints:
   - persons_endpoint_2:
       fdp_path: /persons
       sfdp_path: /persons_above_60
+      sfdp_endpoint_description: This endpoint returns all the people of age > 60
       schema:
           Person:
               type: object
