--- a/generated_servers/requirements-sfdps.txt
+++ b/generated_servers/requirements-sfdps.txt
@@ -4,4 +4,4 @@ pandas
 varsubst
 PyYAML
 langchain_core
-git+ssh://git@github.ibm.com/mc-connectors/teadal_executor.git
+.reqs/teadal_executor-0.1.1-py3-none-any.whl
