--- a/config/gin-watsonx.yaml
+++ b/config/gin-watsonx.yaml
@@ -4,7 +4,7 @@ aiPlatforms:
     credentials:
       api_key: $WATSONX_APIKEY
       api_base: https://us-south.ml.cloud.ibm.com
-      api_project_id: 02c995f9-d57b-444e-8833-0ab8e404f139
+      api_project_id: $WATSONX_PID
 models:
   granite-code-inst20:
     id: ibm/granite-20b-code-instruct
