--- a/sfdp-template/requirements.txt
+++ b/sfdp-template/requirements.txt
@@ -1,7 +1,6 @@
-fastapi[standard]
-pydantic_settings
-pandas
-varsubst
-PyYAML
-langchain_core
-teadal_executor-0.1.1-py3-none-any.whl
+fastapi
+uvicorn
+# change the link to use http is this is your setup
+# git+https://gitlab.teadal.ubiwhere.com/teadal-tech/asg-runtime.git
+# git+ssh://git@gitlab.teadal.ubiwhere.com/teadal-tech/asg-runtime.git
+git+ssh://git@gl-tdl/teadal-tech/asg-runtime.git
