--- a/sfdp-template/.gitlab-ci.yml
+++ b/sfdp-template/.gitlab-ci.yml
@@ -3,12 +3,8 @@ stages:
 
 variables:
   DOCKER_HOST: tcp://docker:2375
-  DOCKER_TLS_CERTDIR: ""
-  #DOCKER_REGISTRY: registry.gitlab.com
-  #DOCKER_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
-  DOCKER_USER_NAME: CI-token
-  DOCKER_REGISTRY: https://registry.teadal.ubiwhere.com
-  DOCKER_IMAGE: registry.teadal.ubiwhere.com/teadal-public-images/$CI_PROJECT_NAME
+  DOCKER_REGISTRY: registry.teadal.ubiwhere.com
+  DOCKER_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_PATH
 
 build-docker:
   stage: build
@@ -20,17 +16,8 @@ build-docker:
   # override (empty) the global before_script
   before_script: []
   script:
-    - docker login -u "$DOCKER_USER_NAME" -p "$REGISTRY_PASSWORD" "$DOCKER_REGISTRY"
-    - docker build -t "$DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA"  .
+    - echo "$CI_JOB_TOKEN" | docker login -u gitlab-ci-token --password-stdin "$DOCKER_REGISTRY"
+    - docker build --pull -t "$DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA" .
     - docker tag "$DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA" "$DOCKER_IMAGE:latest"
     - docker push "$DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA"
     - docker push "$DOCKER_IMAGE:latest"
-
-build-python:
-  stage: build
-  image: python:3.12
-  before_script:
-    - python --version
-    - pip install build
-  script:
-    - python -m build
