--- a/sfdp-template/Dockerfile
+++ b/sfdp-template/Dockerfile
@@ -20,5 +20,8 @@ COPY transforms ./transforms
 RUN useradd -m appuser
 USER appuser
 
+# Expose FastAPI port
+EXPOSE 8000
+
 # Command to run the app
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
