--- a/sfdp-template/.gitlab-ci.yml
+++ b/sfdp-template/.gitlab-ci.yml
@@ -3,6 +3,7 @@ stages:
 
 variables:
   DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: "" # disable TLS, needed for port 2375, do not remove!
   DOCKER_REGISTRY: registry.teadal.ubiwhere.com
   DOCKER_IMAGE: $DOCKER_REGISTRY/$CI_PROJECT_PATH
 
