--- a/examples/asg-instructions/asg_med_7_persons.yaml
+++ b/examples/asg-instructions/asg_med_7_persons.yaml
@@ -7,10 +7,8 @@ sfdp_endpoints:
           Person:
               type: object
               properties:
-                person_ID:
-                    type: integer
-                    example: 101
-                    description: "map person_id"
+                person_id:
+                birth_datetime:
                 person_age:
                       type: integer
                       example: 3
